<resources>
    <!--App info-->
    <string name="app_name">TFM Mobile app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_app">SecureShare</string>

    <!--Login-->
    <string name="password">Password</string>
    <string name="username">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="save_user">Save User</string>
    <string name="register_button">Register</string>
    <string name="login_msg_ok">The user was logged in correctly.</string>
    <string name="login_msg_1">There was an error while sending the data.</string>

    <!--Register-->
    <string name="register_pass_2">Repeat Password</string>
    <string name="register_pass_1">Password</string>
    <string name="register_mail">Email</string>
    <string name="register_txt">Register User</string>
    <string name="register_username">Username</string>
    <string name="register_msg_ok">The user was created correctly.</string>
    <string name="register_msg_1">There was an error while sending the data.</string>
    <string name="register_msg_2">There was an error in a data format.</string>

    <!--Drawer menu-->
    <string name="todo">a hacer</string>
    <string name="drawer_perfil_titulo">Profile</string>
    <string name="drawer_perfil">Profile</string>
    <string name="drawer_start_titulo">Start</string>
    <string name="drawer_start">Main Menu</string>
    <string name="drawer_subscribed_channel">Subscribed channels</string>
    <string name="drawer_downloaded_files">Downloaded Files</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_alert_dialog_info">User Information</string>
    <string name="drawer_alert_dialog_accept">Accept</string>
    <string name="drawer_alert_dialog_username">User Name: </string>
    <string name="drawer_alert_dialog_usermail">Mail: </string>

    <!--Menu-->
    <string name="menu_btn_crear_canal">Create channel</string>
    <string name="menu_btn_ver_canales_cercanos">See near channels</string>
    <string name="menu_btn_enviar_fichero">Send file</string>
    <string name="menu_btn_ficheros_canal">Files received</string>

    <!--Subscriptions-->
    <string name="suscripciones_tv_text">Subscriptions to channels</string>
    <string name="suscripciones_alert_dialog_title">What do you want to do with this subscription? </string>
    <string name="suscripciones_alert_dialog_desubscribe">Delete subscription</string>
    <string name="suscripciones_alert_dialog_close">Close</string>
    <string name="suscripciones_msg_ok">Subscription deleted</string>
    <string name="suscripciones_msg_not_ok">Subscription could not be deleted. Please, try again.</string>


    <!--Create Channel-->
    <string name="create_channel_codename">User: </string>
    <string name="create_channel_hint">Introduce channel name</string>
    <string name="create_channel_btn_announce">Start announcement</string>
    <string name="create_channel_btn_create">Create channel</string>
    <string name="create_channel_btn_disconnect">Disconnect from client</string>
    <string name="create_channel_btn_send">Send file</string>
    <string name="create_channel_msg_create">Creating channel</string>
    <string name="create_channel_msg_name">Introduce a name</string>
    <string name="create_channel_msg_disconnect">Disconnected from client</string>
    <string name="create_channel_msg_connection_correct">Connexion successful</string>
    <string name="create_channel_msg_connection_fail">There was an error when connecting</string>
    <string name="create_channel_msg_announcing">Announcing</string>
    <string name="create_channel_msg_announcing_fail">There was an error when announcing</string>
    <string name="create_channel_msg_send_data_fail">There was an error when sending the data</string>
    <string name="create_channel_msg_channel_created">The channel was created successfully</string>

    <!--Discover channels-->
    <string name="discover_channel_username">User: </string>
    <string name="discover_channel_channel_name">Channel: </string>
    <string name="discover_channel_btn_search">Search channels</string>
    <string name="discover_channel_btn_end_search">End search</string>
    <string name="discover_channel_btn_subscribe">Subscribe channel</string>
    <string name="discover_channel_msg_no_channel_found">There was no channel found</string>
    <string name="discover_channel_msg_device_found">Device found</string>
    <string name="discover_channel_msg_error_searching">There was an error when searching</string>
    <string name="discover_channel_msg_start_searching">Discovery initiated</string>
    <string name="discover_channel_msg_connect_fail">There was an error when connecting to peer</string>
    <string name="discover_channel_msg_error_subscribe">There was an error when subscribing</string>
    <string name="discover_channel_msg_subscription_success">Subscription successful</string>
    <string name="discover_channel_msg_waiting">Waiting for channel: </string>

    <!--Ficheros canal-->
    <string name="ficheros_canal_hint">Channel to subscribe</string>
    <string name="ficheros_canal_btn_list">Files list</string>
    <string name="ficheros_canal_btn_sub">Subscribe</string>
    <string name="ficheros_canal_msg_start_subscription">Start subscription to channel: </string>
    <string name="ficheros_canal_msg_write_channel">Indicate a channel</string>
    <string name="ficheros_canal_msg_alertdialog_options">Options</string>
    <string name="ficheros_canal_msg_alertdialog_download">Download</string>
    <string name="ficheros_canal_msg_alertdialog_open">Open</string>
    <string name="ficheros_canal_msg_alertdialog_cancel">Cancel</string>
    <string name="ficheros_canal_msg_no_app">There is no app to open this file</string>
    <string name="ficheros_canal_msg_download">Downloading</string>
    <string name="ficheros_canal_msg_firma_correcta">The sign is correct</string>
    <string name="ficheros_canal_msg_firma_incorrecta">There was an error with the sign</string>

    <!--Send file-->
    <string name="send_file_hint">Channel to send file</string>
    <string name="send_file_tv_file">Selected file: </string>
    <string name="send_file_btn_select">Select file</string>
    <string name="send_file_btn_send">Send file</string>
    <string name="send_file_msg_no_file_selected">There was no file selected</string>
    <string name="send_file_msg_sending">Sending file</string>
    <string name="send_file_msg_err_sign">There was an error with the signature. Please, try again.</string>
    <string name="send_file_msg_err_send">There was an error with the file. Please, try again.</string>
    <string name="send_file_msg_err_user_1">The user does not exist.</string>
    <string name="send_file_msg_err_user_2">The user did not create the channel.</string>
    <string name="send_file_msg_err_channel">The channel does not exist.</string>
</resources>