<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/drawer_perfil_titulo">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_baseline_new_releases_24"
                    android:title="@string/drawer_perfil" />
            </group>
        </menu>
    </item>

    <item android:title="@string/drawer_start_titulo">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_start"
                    android:icon="@drawable/ic_baseline_new_releases_24"
                    android:title="@string/drawer_start" />
                <item
                    android:id="@+id/nav_subscriptions"
                    android:icon="@drawable/ic_baseline_new_releases_24"
                    android:title="@string/drawer_subscribed_channel" />
                <item
                    android:id="@+id/nav_files_downloaded"
                    android:icon="@drawable/ic_baseline_new_releases_24"
                    android:title="@string/drawer_downloaded_files" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/drawer_logout" />

</menu>