<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateChannelActivity">

    <!-- Contenedor principal de la actividad -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- AppBarLayout para la barra de herramientas -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Barra de herramientas personalizada -->
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/news_green"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                app:title="@string/app_name"
                app:titleTextColor="@color/black" />

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Contenedor del fragmento principal -->
        <FrameLayout
            android:id="@+id/main_fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="360dp"
                    android:layout_height="58dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.407">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_channel_txt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_channel_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/create_channel_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_channel_codename"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.214" />

                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="232dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.855">

                    <Button
                        android:id="@+id/create_channel_btn_anounce"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_channel_btn_announce"
                        android:layout_marginBottom="40sp"/>

                    <Button
                        android:id="@+id/create_channel_btn_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_channel_btn_create"
                        android:layout_marginBottom="40sp"/>

                    <Button
                        android:id="@+id/create_channel_btn_disconnect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_channel_btn_disconnect" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <!-- Botón en el centro -->

    </RelativeLayout>

    <!-- NavigationView para el menú desplegable -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
